--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						   Excel for organizing and analyzing data.<br />
 
                            I'm eager to learn, grow, and  expand my skills. Feel free to explore my projects. I'm always open to collaboration, feedback, or new opportunities.<br />
-						   <a href="https://github.com/ABHISHEKCHAUHAN10" target="_blank" rel="noopener noreferrer" >@The Learning Analyst</a>.</p>
+						   <a href="pdfs/Resume.pdf" target="_blank" rel="noopener noreferrer" >@The Learning Analyst</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -168,4 +168,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
